# rusty-asmgen

./: .gdbinit  .gitignore  Cargo.toml  Makefile  README.md  c2rust-lib.rs
.cargo/: config.toml
benches/: optimizing_compiler.rs
benches/common/: mod.rs
include/: ast.h  compile.h
runtime/: print_int.c  print_int_mock.c  timing.c
src/: ast.c  ast.rs  compile.c  compile.rs  compiler.c  compiler.rs  lib.rs  main.rs  parser.c  parser.rs
tests/: stage1.rs  stage2.rs  stage3.rs  stage4.rs  stage5.rs  stage6.rs  stage7.rs
tests/common/: mod.rs
