[workspace]
members = [
]

[package]
name = "asmgen"
authors = ["C2Rust", "Tyler Port"]
version = "0.0.1"
publish = false
edition = '2021'

[profile.release]
debug = true

[profile.bench]
debug = true

# [[bin]]
# path = "src/compiler.rs"
# name = "compiler"

[dependencies]
# libc = "0.2"

# These are only used for the testing/development environment
[dev-dependencies]
# https://rust-cli.github.io/book/tutorial/testing.html 
# the Rust CLI working group suggests these two crates for writing tests. 
assert_cmd = "2"
# predicates = "2"
console = "0.15"
# grep = "0.2"
criterion = "0.3"

[dev-dependencies.similar]
version = "2"
features = ["text", "bytes", "inline"]

[[bench]]
name = "optimizing_compiler"
harness = false

[[tests]]




