[workspace]
members = [
]

[package]
name = "asmgen"
authors = ["C2Rust", "Tyler Port"]
version = "0.0.1"
publish = false
edition = '2021'

[profile.release]
debug = true

[profile.bench]
debug = true

[dependencies]
# libc = "0.2"

# These are only used for the testing/development environment
[dev-dependencies]
# https://rust-cli.github.io/book/tutorial/testing.html 
# the Rust CLI working group suggests these crates for writing tests and benchmarks. 
assert_cmd = "2"
console = "0.15"

[dev-dependencies.similar]
version = "2"
features = ["text", "bytes", "inline"]

[dev-dependencies.criterion]
version = "0.3"
features = ["html_reports"]

[[bench]]
name = "optimizing_compiler"
harness = false





